--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "@progress/kendo-data-query": "^1.6.0",
     "@progress/kendo-drawing": "^1.17.5",
     "@progress/kendo-licensing": "^1.3.0",
     "@progress/kendo-react-buttons": "^5.14.1",
+    "@progress/kendo-react-data-tools": "^5.16.1",
     "@progress/kendo-react-dateinputs": "^5.14.1",
     "@progress/kendo-react-dialogs": "^5.14.1",
     "@progress/kendo-react-dropdowns": "^5.14.1",
+    "@progress/kendo-react-grid": "^5.16.1",
     "@progress/kendo-react-inputs": "^5.14.1",
     "@progress/kendo-react-intl": "^5.14.1",
     "@progress/kendo-react-progressbars": "^5.14.1",
